--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ wasm-bindgen = "0.2"
 js-sys = "0.3"
 web-sys = { version = "0.3", features = ["console"] }
 serde = { version = "1.0", features = ["derive"] }
-serde-wasm_bindgen = "0.4"
+serde-wasm-bindgen = "0.4"
 serde_json = "1.0"
 
 [profile.release]
